--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,6 @@ textarea:focus {
   color: #fff;
   font-size: 1.5rem;
   font-weight: bold;
-  font-family: cursive;
 }
 
 .brand:hover {
@@ -136,11 +135,11 @@ textarea:focus {
   position: absolute;
   top: -20px;
   border-radius: 100px;
-  padding: 5px 7px;
   font-size: 12px;
+  padding: 5px;
 }
 .name-button {
-  padding: 5px 15px;
+  padding: 5px;
   border: 1px solid #e4e4e4;
   background-color: white;
   border-radius: 2px;
@@ -326,7 +325,7 @@ textarea:focus {
 }
 /* CONTACT */
 .contactInfo {
-  padding: 70px 0;
+  margin-bottom: 70px;
 }
 
 .social-media a:not(:first-child) {
@@ -340,8 +339,9 @@ textarea:focus {
   justify-content: center;
   align-items: center;
 }
+
 .box-info {
-  width: 80%;
+  width: 100%;
   height: 100%;
   flex-direction: column;
   padding: 40px 0;
@@ -443,6 +443,7 @@ textarea:focus {
   background-color: #202020;
   padding: 15px;
   margin-left: 15px;
+  border-radius: 5px;
 }
 
 .shopping-now:hover {
@@ -582,7 +583,7 @@ textarea:focus {
   width: 100%;
 }
 /* CART */
-.cart-iterm {
+.cart-item {
   margin: 40px 0;
   padding: 20px;
   background-color: white;
@@ -590,6 +591,18 @@ textarea:focus {
   position: relative;
   border: 1px solid #202020;
   border-radius: 5px;
+}
+
+.empty-cart {
+  border: 1px solid transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #cff4fc;
+  border-color: #b6effb;
+  margin-top: 20px;
+  border-radius: 5px;
+  padding: 15px;
 }
 
 .remove-button {
@@ -669,14 +682,8 @@ textarea:focus {
 .footer {
   background-color: #202020;
 }
-.card-name {
-  width: 4%;
-  margin: 10px;
-}
-.card-name img {
-  width: 100%;
-  height: 50px;
-  object-fit: contain;
+.footer-container {
+  padding: 25px;
 }
 
 /* Payment */
@@ -754,6 +761,9 @@ textarea:focus {
   .brand {
     font-size: 1.1rem;
   }
+  .contact-Box {
+    margin-top: 20px;
+  }
 } 
 
 @media (max-width: 525px) {
@@ -767,4 +777,8 @@ textarea:focus {
   .brand {
     font-size: 15px;
   }
+  .empty-cart {
+    padding: 4px;
+  }
 }
+
