--- a/src/App.scss
+++ b/src/App.scss
@@ -62,6 +62,15 @@ input:focus, select:focus, textarea:focus {
 
 .navigation {
   padding: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.user-cart {
+  display: flex;
+  align-items: center;
 }
 
 .Announcement {
@@ -140,6 +149,7 @@ input:focus, select:focus, textarea:focus {
 }
 
 .search-sort-container {
+  display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
@@ -147,7 +157,7 @@ input:focus, select:focus, textarea:focus {
 .Login-Register a {
   color: #fff;
   text-transform: uppercase;
-  font-size: 15px;
+  font-size: 20px;
   margin-right: 15px;
   font-weight: bold;
   position: relative;
@@ -161,8 +171,7 @@ input:focus, select:focus, textarea:focus {
   position: absolute;
   top: -20px;
   border-radius: 100px;
-  font-size: 12px;
-  padding: 5px;
+  font-size: 11px;
 }
 
 .name-button {
