--- a/src/App.scss
+++ b/src/App.scss
@@ -199,7 +199,7 @@ textarea:focus {
 }
 
 .dropdown-menu {
-  background-color: $main-color  !important;
+  background-color: $main-color !important;
   border: 0 !important;
   padding: 0 !important;
   overflow: hidden;
@@ -319,7 +319,8 @@ textarea:focus {
 
 .subscribe-section {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.226), rgba(0, 0, 0, 0.226)),
-    url("https://sasshoes-com.s3.us-west-2.amazonaws.com/img/banner-uplift-21.jpg") no-repeat scroll center / cover;
+    url("https://sasshoes-com.s3.us-west-2.amazonaws.com/img/banner-uplift-21.jpg")
+      no-repeat scroll center / cover;
   padding: 100px 0 100px;
 }
 
